# vamp-ir-proto

./: Cargo.toml
src/: ast.rs  main.rs  transform.rs  vamp_ir.pest
tests/: transitive.pir
