[package]
name = "vamp-ir-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.2.1"
pest_derive = "2.2.1"
ark-ff = "0.3"
ark-ec = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
rand_core = "0.6.3"
plonk = { path = "../plonk" }
plonk-core = { path = "../plonk/plonk-core", features = [ "std", "trace", "trace-print" ] }
